Implement ability to split expenses by proportion